--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "kute.js": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dust-effect": "^0.0.7",
     "react-icons": "^4.10.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "tsparticles": "^2.10.1",
+    "tsparticles-preset-links": "^2.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "typescript": "^5.1.6",
     "vite": "^4.0.0"
   }
 }
