--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "easy-pie-chart": "^2.1.7",
     "kute.js": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dust-effect": "^0.0.7",
     "react-icons": "^4.10.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
     "sass": "^1.57.1",
     "tsparticles": "^2.10.1",
+    "tsparticles-engine": "^2.10.1",
     "tsparticles-preset-links": "^2.10.1"
   },
   "devDependencies": {
