--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dust-effect": "^0.0.7",
     "react-icons": "^4.10.1",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-router-dom": "^6.14.1",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
