--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "easy-pie-chart": "^2.1.7",
     "kute.js": "^2.2.4",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.14.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
     "sass": "^1.57.1",
