--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.14.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
